force-app/main/default/objects/Approval_Process_Signing_Ceremony__mdt/Approval_Process_Signing_Ceremony__mdt.object-meta.xml
<CustomObject>
    <description>Used to manage the Signing Ceremony Copy required for approvals</description>
    <label>Approval Process Signing Ceremony</label>
    <pluralLabel>Approval Process Signing Ceremonies</pluralLabel>
</CustomObject>