force-app/main/default/objects/Approval_Process_Signing_Ceremony__mdt/fields/Approval_Process_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Dev_Name__c</fullName>
    <description>The developer or API name of the Approval Process</description>
    <label>Approval Process Dev Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>