force-app/main/default/objects/Approval_Process_Signing_Ceremony__mdt/fields/PNSO_Contracting_Officer_Copy__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Contracting_Officer_Copy__c</fullName>
    <description>PNSO Contracting Officer Copy</description>
    <label>PNSO_Contracting Officer Copy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>