force-app/main/default/objects/Approval_Process_Signing_Ceremony__mdt/fields/Signing_Ceremony_Copy_Long__c.field-meta.xml
<CustomField>
    <fullName>Signing_Ceremony_Copy_Long__c</fullName>
    <description>Signing Ceremony Copy to be used when approving</description>
    <label>Signing Ceremony Copy Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>